# link_inspector

./: .gitignore  Cargo.toml  LICENSE  README.md  astro.config.mjs  build.sh  curl_requests.sh  package-lock.json  test_file.docx
.github/workflows/: release.yaml
curl_requests/: _info.txt  _test_file copy.txt  _test_file.docx  _test_file.txt  _test_file.xlsx  docx_curl.sh  html_curl.sh  pptx_curl.sh  xlsx_curl.sh
frontend/: .gitignore  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  vite.config.js
frontend/src/: env.d.ts
frontend/src/components/: FileUploadForm.astro  Footer.astro  Head.astro  HeroSection.astro  LanguageSelector.astro  LinkItem.tsx  LinkListSkeleton.tsx  LinkStatusCard.tsx  LinksList.tsx  Main.astro  Navbar.astro  Results.astro  ResultsError.astro  ResultsOrderExport.astro  (+4 more)
frontend_alt/: package.json
src/: main.rs
src/app_router/: errors.rs  mod.rs  models.rs  responses.rs  router.rs  upload.rs  utilities.rs
src/cli/: cli_handler.rs  mod.rs
src/handler_docx/: get_links.rs  mod.rs  new.rs  process.rs  unzip_xml_rels.rs
src/handler_html/: get_links.rs  mod.rs  new.rs  parser.rs  process.rs
src/handler_office/: extract_data.rs  get_links.rs  mod.rs  new.rs  process.rs  unzip_xml_rels.rs
src/handlers/: html_handler.rs  mod.rs  office_handler.rs  pdf_handler.rs  txt_handler.rs
src/http_client/: create_client.rs
src/link_checker/: verifier.rs
utilidades/curl_requests/: _test_file.html  _test_file.pptx  _test_file.txt  pptx_curl.sh  xlsx_curl.sh
utilidades/vainilla_js/: index.html
(+21 files in other folders)
