[package]
name = "link_inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
axum-embed = "0.1.0"
futures = "0.3.30"
linkify = "0.10.0"
lopdf = "0.33.0"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls"] }
roxmltree = "0.20.0"
rust-embed = "8.5.0"
scraper = "0.20.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
url = "2.5.2"
zip = "2.1.6"
